RESOLVED FIXED71284
[skia] call readPixels on canvas instead of device (will be private on device soon) and check for error
https://bugs.webkit.org/show_bug.cgi?id=71284
Summary [skia] call readPixels on canvas instead of device (will be private on device...
Mike Reed
Reported 2011-11-01 06:41:14 PDT
[skia] call readPixels on canvas instead of device (will be private on device soon) and check for error
Attachments
Patch (3.22 KB, patch)
2011-11-01 06:42 PDT, Mike Reed
no flags
Patch (3.34 KB, patch)
2011-11-01 07:11 PDT, Mike Reed
no flags
Mike Reed
Comment 1 2011-11-01 06:42:09 PDT
Stephen White
Comment 2 2011-11-01 06:56:13 PDT
Comment on attachment 113166 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=113166&action=review OK. r=me > Source/WebCore/platform/graphics/skia/ImageBufferSkia.cpp:239 > unsigned destBytesPerRow = 4 * rect.width(); Nit: This line could be moved below the readPixels() call (not new to this patch, though).
Mike Reed
Comment 3 2011-11-01 07:11:04 PDT
Mike Reed
Comment 4 2011-11-01 07:11:36 PDT
moved computation of destinationRowBytes to after failure-check on readPixels.
Stephen White
Comment 5 2011-11-01 07:47:00 PDT
Comment on attachment 113168 [details] Patch Looks good. r=me
WebKit Review Bot
Comment 6 2011-11-01 08:59:24 PDT
Comment on attachment 113168 [details] Patch Clearing flags on attachment: 113168 Committed r98969: <http://trac.webkit.org/changeset/98969>
WebKit Review Bot
Comment 7 2011-11-01 08:59:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.