[skia] call readPixels on canvas instead of device (will be private on device soon) and check for error https://bugs.webkit.org/show_bug.cgi?id=71284

Reviewed by Stephen White.

No new tests. This is preparing for an API change to Skia.

* platform/graphics/skia/ImageBufferSkia.cpp:
(WebCore::getImageData):
(WebCore::ImageBuffer::getUnmultipliedImageData):
(WebCore::ImageBuffer::getPremultipliedImageData):


Canonical link: https://commits.webkit.org/87574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98969 268f45cc-cd09-0410-ab3c-d52691b4dbfc